--- a/Angular-Demo-Forms/src/app/home/home.component.html
+++ b/Angular-Demo-Forms/src/app/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<div class="home">
+    <h1>Select form type:</h1>
+    <div class="container-buttons">
+        <button routerLink="/template" class="btn-template-driven">Forms - template driven</button>
+        <button routerLink="/reactive" class="btn-reactive">Forms - template driven</button>
+    </div>
+</div>
+
+
