--- a/Angular-Demo-Forms/src/app/home/home.component.css
+++ b/Angular-Demo-Forms/src/app/home/home.component.css
@@ -1,9 +1,22 @@
 .home {
   font-family: Arial, Helvetica, sans-serif;
+  position: relative;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;   
 }
 
 h1 {
-  margin-top: 5%;
+  margin-top: 15%;
   text-align: center;
 }
 
