--- a/Angular-Demo-Forms/src/app/home/home.component.html
+++ b/Angular-Demo-Forms/src/app/home/home.component.html
@@ -1,8 +1,9 @@
+<img src="../../assets/angular_training_banner.jpg">
 <div class="home">
     <h1>Select form type:</h1>
     <div class="container-buttons">
         <button routerLink="/template" class="btn-template-driven">Forms - template driven</button>
-        <button routerLink="/reactive" class="btn-reactive">Forms - template driven</button>
+        <button routerLink="/reactive" class="btn-reactive">Forms - reactive</button>
     </div>
 </div>
 
