--- a/Angular-Demo-Forms/src/app/forms-template-driven/forms-template-driven.component.css
+++ b/Angular-Demo-Forms/src/app/forms-template-driven/forms-template-driven.component.css
@@ -13,3 +13,16 @@
     position: absolute;
     z-index: -1;   
   }
+
+  form {
+    margin-top: 10%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .form-group {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin-top: 30px;
+  }
