--- a/Angular-Demo-Forms/src/app/forms-reactive/forms-reactive.component.css
+++ b/Angular-Demo-Forms/src/app/forms-reactive/forms-reactive.component.css
@@ -1,15 +1,28 @@
-.forms-reactive-wrapper {
-    position: relative;
-  }
-  
-  img {
-    width: 100%;
-    height: 100%;
-    opacity: 0.2;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;   
-  }
+.forms-template-wrapper {
+  position: relative;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  opacity: 0.2;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: -1;   
+}
+
+form {
+  margin-top: 10%;
+  display: flex;
+  justify-content: center;
+}
+
+.form-group {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 30px;
+}
