--- a/Angular-Demo-Forms/src/app/forms-reactive/forms-reactive.component.html
+++ b/Angular-Demo-Forms/src/app/forms-reactive/forms-reactive.component.html
@@ -1,4 +1,59 @@
 <img src="../../assets/angular-blue.png">
-<div class="forms-template-wrapper">
-    
-</div>
+<!--
+The defaut handling of the form is by using action="POST" method and sending the request to some server.
+This is the rason for data disapearing after clicking the submit button (preventDefault).
+Angular handles it ahother way:
+	
+I. Building reactive forms in Angular:
+
+1. Import ReactiveFormsModule in app.modules.ts and register it in the @NgModule -> imports:
+
+2. Import FormGroup and FormControl in the .ts file and register it in the "export" class part -> examle: "signupForm: FormControl":
+
+3. In order to be detected from Angular:
+    1) it is neccessery form tag to receive -> [formGroup]="profileForm"
+    2) formControlName="..."
+		
+-->
+<form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+    <div id="user-data">
+        <div class="form-group">
+            <label for="first-name">First Name: </label>
+            <input 
+                id="first-name" 
+                type="text" 
+                formControlName="firstName"
+            >
+        </div>
+        <div id="user-data">
+            <div class="form-group">
+                <label for="last-name">Last Name: </label>
+                <input 
+                    id="last-name" 
+                    type="text" 
+                    formControlName="lastName"
+                >
+            </div>
+        </div>
+        <div id="user-data">
+            <div class="form-group">
+                <div formGroupName="address">
+                    <h2>Address</h2>
+                  
+                    <label for="street">Street: </label>
+                    <input id="street" type="text" formControlName="street">
+                  
+                    <label for="city">City: </label>
+                    <input id="city" type="text" formControlName="city">
+                  
+                    <label for="state">State: </label>
+                    <input id="state" type="text" formControlName="state">
+                  
+                    <label for="zip">Zip Code: </label>
+                    <input id="zip" type="text" formControlName="zip">
+                  </div>
+            </div>
+        </div>
+        <button type="submit">Submit</button>
+    </div>    
+</form>
